chore: remove unnecessary group roles

--- a/app/templates/cases/overview.hbs
+++ b/app/templates/cases/overview.hbs
@@ -4,7 +4,7 @@
   <div class="auk-u-m-8">
     <Auk::Toolbar>
       <Auk::Toolbar::Group @position="right">
-        {{#if (user-may "view-archived-cases")}}
+        {{#if (user-may "manage-cases")}}
           <Auk::Toolbar::Item class="auk-o-flex auk-o-flex--vertical-center">
             <Auk::Label
               class="auk-u-text-nowrap auk-u-mr-2 auk-u-p-0"
