KAS-3570 hide edit button until loading task is completed on government areas panel

--- a/app/components/utils/government-areas/government-areas-panel.hbs
+++ b/app/components/utils/government-areas/government-areas-panel.hbs
@@ -10,7 +10,7 @@
           </Auk::Toolbar::Item>
         </Auk::Toolbar::Group>
         <Auk::Toolbar::Group @position="right">
-          {{#if @allowEditing}}
+          {{#if (and @allowEditing this.groupGovernmentFieldsByDomain.isIdle)}}
             <Auk::Toolbar::Item>
               <Auk::Button
                 data-test-government-areas-panel-edit
