--- a/app/components/changes-alert.hbs
+++ b/app/components/changes-alert.hbs
@@ -5,12 +5,12 @@
     {{this.message}}
   </p>
   <div class="button-container">
-    <Auk::Button
-      @skin="tertiary"
+    <AuButton
+      @skin="secondary"
       {{action "clearAction"}}
       data-test-changes-alert-close
     >
       {{this.buttonText}}
-    </Auk::Button>
+    </AuButton>
   </div>
 </div>
