--- a/app/components/access-level-pill.hbs
+++ b/app/components/access-level-pill.hbs
@@ -24,33 +24,37 @@
       </AuPill>
     {{/if}}
   {{else}}
-    <div class="auk-u-maximize-width">
-      <Utils::AccessLevelSelector
-        @allowClear={{true}}
-        @displayField="label"
-        @sortField="position"
-        @selected={{@accessLevel}}
-        @onChange={{this.changeAccessLevel}}
-        data-test-access-level-pill-selector
-      />
+    <div class="auk-o-flex auk-o-flex--vertical-center">
+      <div class="auk-u-maximize-width">
+        <Utils::AccessLevelSelector
+          @allowClear={{true}}
+          @displayField="label"
+          @sortField="position"
+          @selected={{@accessLevel}}
+          @onChange={{this.changeAccessLevel}}
+          data-test-access-level-pill-selector
+        />
+      </div>
+      <AuButton
+        @skin="naked"
+        @icon="check"
+        @hideText={{true}}
+        {{on "click" (perform this.confirmChangeAccessLevel @accessLevel)}}
+        class="auk-o-flex__item--fix auk-u-ml"
+        data-test-access-level-pill-save
+      >
+        {{t "save"}}
+      </AuButton>
+      <AuButton
+        @skin="naked"
+        @icon="x"
+        @hideText={{true}}
+        {{on "click" (perform this.cancelChangeAccessLevel)}}
+        class="auk-o-flex__item--fix"
+        data-test-access-level-pill-cancel
+      >
+        {{t "cancel"}}
+      </AuButton>
     </div>
-    <Auk::Button
-      @skin="tertiary"
-      @layout="icon-only"
-      @icon="check"
-      @size="small"
-      {{on "click" (perform this.confirmChangeAccessLevel @accessLevel)}}
-      class="auk-u-ml"
-      data-test-access-level-pill-save
-    />
-    <Auk::Button
-      @skin="tertiary"
-      @layout="icon-only"
-      @icon="x"
-      @size="small"
-      {{on "click" (perform this.cancelChangeAccessLevel)}}
-      class="auk-u-ml"
-      data-test-access-level-pill-cancel
-    />
   {{/if}}
 {{/if}}
