--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -36,14 +36,14 @@
         />
       {{else if (user-may "manage-decisions")}}
         <div class="auk-u-p-2">
-          <Auk::Button
-            @skin="borderless"
+          <AuButton
+            data-test-agendaitem-decision-upload-file
+            @skin="naked"
             @icon="upload"
             {{on "click" this.toggleIsAddingReport}}
-            data-test-agendaitem-decision-upload-file
           >
             {{t "signed-decision-add"}}
-          </Auk::Button>
+          </AuButton>
         </div>
       {{/if}}
     {{else}}
