--- a/app/components/auk/alert.hbs
+++ b/app/components/auk/alert.hbs
@@ -9,14 +9,14 @@
     </div>
   </div>
   {{#if @isClosable}}
-    <Auk::Button
-      @skin="muted-borderless"
+    <AuButton
+      @skin="naked"
       @icon="x"
-      @layout="icon-only"
+      @hideText={{true}}
       @size={{@size}}
       {{on "click" this.close}}
     >
       {{t "cancel"}}
-    </Auk::Button>
+    </AuButton>
   {{/if}}
 </div>
