KAS-3490 add new translation for limited access to replace confidential

--- a/app/components/agenda/agenda-detail/sidebar-item.hbs
+++ b/app/components/agenda/agenda-detail/sidebar-item.hbs
@@ -49,7 +49,7 @@
                 data-test-agenda-detail-sidebar-item-confidential
               >
                 <EmberTooltip @side="top-end" @tooltipClass="tooltip-custom">
-                  {{t "confidential"}}
+                  {{t "limited-access"}}
                 </EmberTooltip>
               </AuPill>
             {{/if}}
