--- a/app/components/agenda/agenda-overview/agenda-overview-item.hbs
+++ b/app/components/agenda/agenda-overview/agenda-overview-item.hbs
@@ -58,7 +58,7 @@
               @skin="warning"
               @icon="lock-closed"
             >
-              {{t "confidential"}}
+              {{t "limited-access"}}
             </AuPill>
           {{/if}}
           {{#if this.loadNewsletterVisibility.lastSuccessful}}
