--- a/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-view.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-view.hbs
@@ -82,7 +82,7 @@
                   @icon="lock-closed"
                   data-test-agendaitem-titles-confidential
                 >
-                  {{t "confidential"}}
+                  {{t "limited-access"}}
                 </AuPill>
               </Auk::Toolbar::Item>
             {{/if}}
