--- a/app/components/cases/new-subcase.hbs
+++ b/app/components/cases/new-subcase.hbs
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div class="auk-form-group">
-        <Auk::Label for="new-subcase-confidential">{{t "confidential"}}</Auk::Label>
+        <Auk::Label for="new-subcase-confidential">{{t "limited-access"}}</Auk::Label>
         <Auk::Toggle
           data-test-new-subcase-confidential
           id="new-subcase-confidential"
