--- a/app/components/subcase/subcase-titles-panel/subcase-titles-panel-edit.hbs
+++ b/app/components/subcase/subcase-titles-panel/subcase-titles-panel-edit.hbs
@@ -1,7 +1,7 @@
 <div class="auk-box auk-u-mt-4 auk-u-mb-8">
   <div class="auk-u-mb-4">
     <div class="auk-form-group">
-      <Auk::Label for="subcase-confidential">{{t "confidential"}}</Auk::Label>
+      <Auk::Label for="subcase-confidential">{{t "limited-access"}}</Auk::Label>
       <Auk::Toggle
         id="subcase-confidential"
         @checked={{@subcase.confidential}}
