--- a/app/templates/cases/case/subcases/subcase/overview.hbs
+++ b/app/templates/cases/case/subcases/subcase/overview.hbs
@@ -13,7 +13,7 @@
           <div class="confidential">
             <Auk::Checkbox
               @checked={{@model.subcase.confidential}}
-              @label={{t "confidential"}}
+              @label={{t "limited-access"}}
               @disabled={{true}}
               data-test-cases---subcase-overview-confidentiality-checkbox={{true}}
             />
